--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,32 +1,47 @@
-# Maven
+# Starter pipeline
+# Start with a minimal pipeline that you can customize to build and deploy your code..
+# Add steps that build, run tests, deploy, and more:
+# https://aka.ms/yaml
 
-# Build your Java project and run tests with Apache Maven.
-# Add steps that analyze code, save build artifacts, deploy, and more:
-# https://docs.microsoft.com/azure/devops/pipelines/languages/java
+variables:
+  InjectAlmOctaneTasks: 'true'
+  AlmOctaneConnection33: 'qa61'
+  AlmOctaneConnection33Workspaces: '1002'
+  ALMOctaneLogLevel: 'debug'
+  system.debug: 'true'
+  system.debugContext: 'true'
+  GithubRepositoryConnection: 'elokshin'
 
-trigger:
-#- master
-  none
+jobs:
+- job: AlmOctanePipelineStart
+  condition: always()
 
-pool:
-  vmImage: 'ubuntu-latest'
+- job: A
+  steps:
+  - script: echo Hello, Job A!
+    displayName: 'Run a one-line script'
+  dependsOn:
+  - AlmOctanePipelineStart
 
-steps:
-# - task: build-task@1
-#   inputs:
-#     OctaneService: 'Evgeny'
-- task: Maven@3
-  inputs:
-    mavenPomFile: 'pom.xml'
-    mavenOptions: '-Xmx3072m'
-    javaHomeOption: 'JDKVersion'
-    jdkVersionOption: '1.8'
-    jdkArchitectureOption: 'x64'
-    publishJUnitResults: true
-    testResultsFiles: '**/surefire-reports/TEST-*.xml'
-    goals: 'package'
-- task: PublishTestResults@2
-  inputs:
-    testResultsFormat: 'JUnit'
-    testResultsFiles: '**/surefire-reports/TEST-*.xml'
-    mergeTestResults: true
+- job: B
+  dependsOn: AlmOctanePipelineStart
+  pool:
+    vmImage: 'ubuntu-latest'
+  steps:
+  - task: Maven@3
+    inputs:
+      mavenPomFile: 'pom.xml'
+      mavenOptions: '-Xmx3072m'
+      javaHomeOption: 'JDKVersion'
+      jdkVersionOption: '1.8'
+      jdkArchitectureOption: 'x64'
+      publishJUnitResults: true
+      testResultsFiles: '**/surefire-reports/TEST-*.xml'
+      goals: 'package'
+
+- job: AlmOctanePipelineEnd
+  condition: always()
+  dependsOn:
+  - AlmOctanePipelineStart
+  - A
+  - B
