Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -10,7 +10,7 @@ variables:
   ALMOctaneLogLevel: 'debug'
   system.debug: 'true'
   system.debugContext: 'true'
-  GithubRepositoryConnection: 'elokshin'
+  GithubRepositoryConnection: 'mayarfl'
 
 jobs:
 - job: AlmOctanePipelineStart
