Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -5,8 +5,8 @@
 
 variables:
   #InjectAlmOctaneTasks: 'true'
-  OctaneServiceConnection: 'qa9'
-  WorkspaceList: '31001'
+  OctaneServiceConnection: 'demo'
+  WorkspaceList: '1002'
   ALMOctaneLogLevel: 'debug'
   system.debug: 'true'
   system.debugContext: 'true'
